Introduce Fact and use it instead of BackendFactEntity. Add SolutionCachingBackendDecorator. Turn *verbs param of backend's methods into ReasoningOptions object.